<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    tools:context=".Controller.DeliveryNote">

    <TextView
        android:id="@+id/scr02_DelvDistQty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:text="@string/scr02_textview"
        app:layout_constraintStart_toEndOf="@+id/scr_02_Order_Txt"
        app:layout_constraintTop_toTopOf="@+id/scr_02_Order_Txt" />

    <Button
        android:id="@+id/scr_02_Print_Btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/print"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/scr_02_Main"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/scr_02_MainBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/scr_02_DistNme_Txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="92dp"
        android:background="@color/purple_500"
        android:text="@string/customer"
        android:textColor="#FFEB3B"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/scr_02_DistAddr_Txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:text="@string/scr02_DistAddr"
        android:textColor="#FFEB3B"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scr_02_DistNme_Txt" />

    <TextView
        android:id="@+id/scr_02_Order_Txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="130dp"
        android:text="@string/scr02_Order"
        android:textColor="#FFEB3B"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/scr02_DelvDistNme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/scr02a_textview"
        app:layout_constraintStart_toEndOf="@+id/scr_02_DistNme_Txt"
        app:layout_constraintTop_toTopOf="@+id/scr_02_DistNme_Txt" />

    <TextView
        android:id="@+id/scr02_DelvNoteAddrTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:text="@string/scr02b_textview"
        app:layout_constraintStart_toEndOf="@+id/scr_02_DistAddr_Txt"
        app:layout_constraintTop_toTopOf="@+id/scr_02_DistAddr_Txt" />

    <WebView
        android:id="@+id/printSlip"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@id/scr_02_Print_Btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scr_02_Order_Txt" />

    <EditText
        android:id="@+id/scr02_DeliveryNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="97dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Print"
        android:inputType="textPersonName"
        android:text="@string/scr02_delivery_note"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/printSlip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>