<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/purple_500"
    tools:context=".Controller.SignatureActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/scr02_DelvDistQty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="20dp"
        android:text="@string/scr02s_textview"
        app:layout_constraintBottom_toTopOf="@+id/scr02_DelvNoteAddrTxt"
        app:layout_constraintStart_toEndOf="@+id/scr_02_Order_Txt"
        app:layout_constraintTop_toTopOf="@+id/scr_02_Order_Txt" />

    <Button
        android:id="@+id/scr_02_Print_Btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/scr02s_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/scr_02_Main"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/scr_02_MainBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/scr_02_DistNme_Txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="92dp"
        android:background="@color/purple_500"
        android:text="@string/scr02_customer"
        android:textColor="#FFEB3B"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/scr_02_DistAddr_Txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="29dp"
        android:text="@string/scr02_DistAddr"
        android:textColor="#FFEB3B"
        app:layout_constraintBottom_toTopOf="@+id/signtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scr_02_DistNme_Txt" />

    <TextView
        android:id="@+id/scr_02_Order_Txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="130dp"
        android:layout_marginBottom="13dp"
        android:text="@string/scr02_Order"
        android:textColor="#FFEB3B"
        app:layout_constraintBottom_toTopOf="@+id/scr_02_DistAddr_Txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/scr02_DelvDistNme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="20dp"
        android:text="@string/scr02sb_textview"
        app:layout_constraintBottom_toTopOf="@+id/scr02_DelvDistQty"
        app:layout_constraintStart_toEndOf="@+id/scr_02_DistNme_Txt"
        app:layout_constraintTop_toTopOf="@+id/scr_02_DistNme_Txt" />

    <TextView
        android:id="@+id/scr02_DelvNoteAddrTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/scr02sa_textview"
        app:layout_constraintStart_toEndOf="@+id/scr_02_DistAddr_Txt"
        app:layout_constraintTop_toTopOf="@+id/scr_02_DistAddr_Txt" />

    <TextView
        android:id="@+id/signtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="210dp"
        android:text="@string/scr02_please_sign_below"
        android:textColor="#FFEB3B"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.github.gcacace.signaturepad.views.SignaturePad
        android:id="@+id/signature_pad"
        app:penColor="@android:color/black"
        android:background="@color/white"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/signtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:saveEnabled="false"
        />



</androidx.constraintlayout.widget.ConstraintLayout>