<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    tools:context=".Controller.ExportFile">

    <Button
        android:id="@+id/scr05_SavBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/scr05_export"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/scr05_MainBtn"
        android:layout_marginBottom="40dp"
        app:layout_constraintVertical_bias="0.768" />

    <Button
        android:id="@+id/scr05_MainBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/scr05_Main_Btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lbfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/scr05_details"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleAdmin" />

    <TextView
        android:id="@+id/fileContents"
        android:layout_width="0dp"
        android:layout_margin="10dp"
        android:layout_height="0dp"
        android:text=""
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/scr05_SavBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbfile"
        app:layout_constraintVertical_bias="0.213" />

    <TextView
        android:id="@+id/titleAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scr05_export_csv"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/scr05_SavBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.075"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>